--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.20.1
+  path: ^1.9.0
+  sqflite: ^2.4.1
 
 dev_dependencies:
   flutter_test:
