--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   intl: ^0.20.1
   path: ^1.9.0
   sqflite: ^2.4.1
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
