--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   sqflite: ^2.4.1
   fl_chart: ^0.69.2
   font_awesome_flutter: ^10.8.0
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
